# compiler-optimization-visualizer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
examples/: branchy.c  const_fold.c  loop.c  recursive.c
src/compopt/: __init__.py  asm.py  cli.py  compilers.py  diff.py  render.py  show.py
tests/: test_asm.py  test_cli.py  test_compilers.py  test_diff.py  test_render.py  test_show.py  test_smoke.py
